fix: header mobile menu overflow and scroll
fix: header mobile menu hidden after click on link

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -53,7 +53,12 @@ html {
 }
 
 .hidden {
-  display: none;
+  transform: translate(100vw, -100vh);
+}
+
+body.modal-open {
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 @media screen and (min-width: 768px) {
