--- a/src/css/header.css
+++ b/src/css/header.css
@@ -47,16 +47,17 @@
 }
 
 .mobile-menu {
+  z-index: 9999;
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
   width: 100vw;
+  overflow-y: hidden;
 
   color: var(--white);
   background-color: var(--violet);
-
-  overflow-y: hidden;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-menu-close {
